--- a/config.yaml
+++ b/config.yaml
@@ -11,10 +11,10 @@
 carpentry: 'lc'
 
 # Overall title for pages.
-title: 'R-toolbox'
+title: 'R for PUFF'
 
 # Date the lesson was created (YYYY-MM-DD, this is empty by default)
-created: '2024-04-09'
+created: '2024-11-11'
 
 # Comma-separated list of keywords for the lesson
 keywords: 'software, data, lesson'
@@ -27,7 +27,7 @@ life_cycle: 'pre-alpha'
 license: 'CC-BY 4.0'
 
 # Link to the source repository for this lesson
-source: 'https://github.com/KUBDatalab/R-toolbox'
+source: 'https://github.com/KUBDatalab/R-PUFF'
 
 # Default branch of your lesson
 branch: 'main'
@@ -64,22 +64,9 @@ episodes:
 - descript-stat.Rmd
 - table1.Rmd
 - tidy-data.Rmd
-- normal-distribution.Rmd
-- is-it-normal.Rmd
-- which-distribution.Rmd
 - linear-regression.Rmd
 - multiple-linear-regression.Rmd
 - logistic-regression.Rmd
-- clt.Rmd
-- barcharts.Rmd
-- powerberegninger.Rmd
-- kmeans.Rmd
-- factor-analysis.Rmd
-- structure-you-work.Rmd
-- fence-test.Rmd
-- design-principles.Rmd
-- large-data.Rmd
-- making-a-new-course.Rmd
 
 # Information for Learners
 learners: 
