--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,13 @@
 # lc: Library Carpentry
 # cp: Carpentries (to use for instructor training for instance)
 # incubator: The Carpentries Incubator
+# Note that you can also use a custom carpentry type. For more info,
+# see the documentation: https://carpentries.github.io/sandpaper-docs/editing.html
 carpentry: 'lc'
+
+# Custom carpentry description
+# This will be used as the alt text for the logo
+# carpentry_description: "Custom Carpentry"
 
 # Overall title for pages.
 title: 'R for PUFF'
@@ -68,6 +74,7 @@ episodes:
 - linear-regression.Rmd
 - multiple-linear-regression.Rmd
 - logistic-regression.Rmd
+- extra.Rmd
 
 # Information for Learners
 learners: 
